# akhenaten-py

./: .gitignore  LICENSE.md  README.md  manifest.in  pyproject.toml  requirements.txt  setup.py  test.py
akhenaten/: __init__.py  akhenaten.py  definitions.py
